--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -24,9 +24,7 @@ jobs:
 
       # Install dependencies
       - name: Install dependencies
-        run: |
-          python -m pip install --upgrade pip
-          pip install -r requirements.txt
+        run: pip install -r requirements.txt
 
       # Deploy to server
       - name: Deploy to Staging Server
@@ -41,15 +39,7 @@ jobs:
 
             # Pull latest changes
             git fetch --all
-            git reset --hard origin/main
             git pull origin main
-
-            # Create virtual environment if not exists
-            python3.11 -m venv venv || true
-            source venv/bin/activate
-
-            # Install dependencies
-            pip install -r requirements.txt
 
             # Stop existing application
             pkill -f "uvicorn main:app" || true
