--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -32,7 +32,7 @@ jobs:
             # Pull latest changes
             echo "Pulling latest changes..."
             git fetch --all
-            git reset --hard origin/main
+            git pull origin main
 
             # Setup virtual environment
             echo "Setting up virtual environment..."
