--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -39,9 +39,9 @@ jobs:
             python3 -m venv venv || exit 1
             source venv/bin/activate || exit 1
 
-            # Install dependencies
-            echo "Installing dependencies..."
-            pip install -r requirements.txt || exit 1
+            # Stop existing application if running
+            echo "Stopping existing application..."
+            pkill -f "uvicorn main:app" || echo "No existing process found"
 
             # Start application
             echo "Starting application..."
