--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -52,7 +52,7 @@ jobs:
 
             # Stop existing application if running
             echo "Stopping existing application..."
-            pkill -f "uvicorn main:app" || echo "No existing process found"
+            pkill uvicorn || echo "No existing process found"
 
             # Start application
             echo "Starting application..."
