chore: Add success log message for application stop in deployment workflow

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -53,6 +53,7 @@ jobs:
             # Stop existing application if running
             echo "Stopping existing application..."
             killall uvicorn || echo "No existing process found"
+            echo "Application stopped successfully"
 
             # Start application
             echo "Starting application..."
