--- a/.github/workflows/ci-cd-pipeline.yml
+++ b/.github/workflows/ci-cd-pipeline.yml
@@ -1,37 +1,9 @@
-name: CI Pipeline
+name: CI/CD Pipeline
 
 on:
   pull_request:
     branches:
       - main
-jobs:
-  test:
-    runs-on: ubuntu-latest  # Use the latest version of Ubuntu
-
-    steps:
-    - name: Checkout code
-      uses: actions/checkout@v2
-
-    - name: Set up Python
-      uses: actions/setup-python@v2
-      with:
-        python-version: 3.9  # You can specify the Python version you're using
-
-    - name: Install dependencies
-      run: |
-        python -m venv venv
-        source venv/bin/activate
-        pip install -r requirements.txt
-
-    - name: Run tests
-      run: |
-        source venv/bin/activate
-        pytest  # Runs the pytest command to execute your tests
-
-
-name: CI/CD Pipeline
-
-on:
   push:
     branches:
       - main
@@ -47,7 +19,7 @@ jobs:
     - name: Set up Python
       uses: actions/setup-python@v2
       with:
-        python-version: 3.9
+        python-version: 3.12  # Use the installed Python version on your server
 
     - name: Install dependencies
       run: |
@@ -62,27 +34,28 @@ jobs:
 
   deploy:
     runs-on: ubuntu-latest
-    needs: test  # This ensures the deploy job runs only after the test job is successful
+    needs: test  # Deploy only after tests pass
 
     steps:
     - name: Checkout code
       uses: actions/checkout@v2
 
-    - name: Set up Python
-      uses: actions/setup-python@v2
-      with:
-        python-version: 3.9
-
-    - name: Install dependencies
+    - name: Set up SSH key
       run: |
-        python -m venv venv
-        source venv/bin/activate
-        pip install -r requirements.txt
+        mkdir -p ~/.ssh
+        echo "${{ secrets.DEPLOY_SSH_PRIVATE_KEY }}" > ~/.ssh/id_rsa
+        chmod 600 ~/.ssh/id_rsa
+        ssh-keyscan -H ${{ secrets.DEPLOY_SERVER_IP }} >> ~/.ssh/known_hosts
 
-    - name: Deploy to server
+    - name: Deploy to AWS EC2
       run: |
-        ssh -o StrictHostKeyChecking=no -i ${{ secrets.DEPLOY_SSH_PRIVATE_KEY }} user@${{ secrets.DEPLOY_SERVER_IP }} "cd /path/to/your/app && git pull && systemctl restart your-app-service"
+        ssh ubuntu@${{ secrets.DEPLOY_SERVER_IP }} << 'EOF'
+          cd /path/to/your/app
+          git pull origin main
+          source venv/bin/activate
+          pip install -r requirements.txt
+          systemctl restart your-app-service  # Restart your application
+        EOF
 
     - name: Notify Deployment Status
-      run: |
-        echo "Deployment completed!"
+      run: echo "Deployment to AWS EC2 completed successfully!"
