--- a/.github/workflows/ci-cd-pipeline.yml
+++ b/.github/workflows/ci-cd-pipeline.yml
@@ -47,7 +47,7 @@ jobs:
         chmod 600 ~/.ssh/id_rsa
         ssh-keyscan -H ${{ secrets.DEPLOY_SERVER_IP }} >> ~/.ssh/known_hosts
 
-    - name: Deploy to AWS EC2
+    - name: Deploy to AWS EC2 and Restart Service
       run: |
         ssh -i ~/.ssh/id_rsa ubuntu@${{ secrets.DEPLOY_SERVER_IP }} << 'EOF'
           cd /HNG-fastapi-books
@@ -55,14 +55,13 @@ jobs:
           source venv/bin/activate
           pip install -r requirements.txt
 
-          # Stop existing Uvicorn process if running
-          pkill -f "uvicorn" || true  
+          # Restart the systemd service
+          sudo systemctl daemon-reload
+          sudo systemctl restart fastapi
+          sudo systemctl status fastapi --no-pager
 
-          # Run Uvicorn with the full path
-          nohup /HNG-fastapi-books/venv/bin/uvicorn main:app --host 0.0.0.0 --port 8000 > uvicorn.log 2>&1 &
-          
-          # Check if it's running
-          pgrep -fa "uvicorn"
+          # Check logs to ensure it started correctly
+          sudo journalctl -u fastapi --no-pager --lines=20
         EOF
 
     - name: Notify Deployment Status
