--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -15,7 +15,7 @@ jobs:
           python-version: 3.11
 
       # Deploy to server
-      - name: Deploy to Staging Server
+      - name: Deploy to Server
         uses: appleboy/ssh-action@v1.0.3
         with:
           host: ${{secrets.SERVER_HOST}}
