--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -7,25 +7,38 @@ on:
 
 jobs:
   deploy:
-    name: Deploy Application
     runs-on: ubuntu-latest
+    needs: test  # Ensures deployment happens only if tests pass
+    permissions:
+      contents: read
 
     steps:
-      - name: Checkout Repository
+      - name: Checkout code
         uses: actions/checkout@v4
 
-      - name: Set up Python
-        uses: actions/setup-python@v4
-        with:
-          python-version: '3.12'
-
-      - name: Install Dependencies
+      - name: Set up SSH key
         run: |
-          python -m venv venv
-          source venv/bin/activate
-          pip install -r requirements.txt
+          mkdir -p ~/.ssh
+          echo "${{ secrets.DEPLOY_SSH_PRIVATE_KEY }}" > ~/.ssh/id_rsa
+          chmod 600 ~/.ssh/id_rsa
+          ssh-keyscan -H ${{ secrets.DEPLOY_SERVER_IP }} >> ~/.ssh/known_hosts
 
-      - name: Deploy FastAPI App
+      - name: Deploy to AWS EC2 and Restart Service
         run: |
-          echo "Deploying FastAPI app..."
-          ssh user@your-server-ip "cd /path/to/app && git pull && systemctl restart fastapi"
+          ssh -i ~/.ssh/id_rsa ubuntu@${{ secrets.DEPLOY_SERVER_IP }} << 'EOF'
+            cd /HNG-fastapi-books
+            git pull origin main
+            source venv/bin/activate
+            pip install -r requirements.txt
+
+            # Restart the systemd service
+            sudo systemctl daemon-reload
+            sudo systemctl restart fastapi
+            sudo systemctl status fastapi --no-pager
+
+            # Check logs to ensure it started correctly
+            sudo journalctl -u fastapi --no-pager --lines=20
+          EOF
+
+      - name: Notify Deployment Status
+        run: echo "Deployment to AWS EC2 completed successfully!"
