--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,4 +1,4 @@
-name: Test
+name: CI/CD Pipeline
 
 on:
   pull_request:
@@ -14,10 +14,10 @@ jobs:
 
     steps:
       - name: Checkout code
-        uses: actions/checkout@v4
+        uses: actions/checkout@v2
 
       - name: Set up Python
-        uses: actions/setup-python@v4
+        uses: actions/setup-python@v2
         with:
           python-version: 3.12
 
@@ -31,3 +31,43 @@ jobs:
         run: |
           source venv/bin/activate
           pytest
+
+  deploy:
+    runs-on: ubuntu-latest
+    needs: test  # Deploy only after tests pass
+
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v2
+
+      - name: Set up SSH key
+        run: |
+          mkdir -p ~/.ssh
+          echo "${{ secrets.DEPLOY_SSH_PRIVATE_KEY }}" > ~/.ssh/id_rsa
+          chmod 600 ~/.ssh/id_rsa
+          ssh-keyscan -H ${{ secrets.DEPLOY_SERVER_IP }} >> ~/.ssh/known_hosts
+
+      - name: Deploy to AWS EC2 and Restart Service
+        run: |
+          ssh -i ~/.ssh/id_rsa ubuntu@${{ secrets.DEPLOY_SERVER_IP }} << 'EOF'
+            cd /HNG-fastapi-books
+            git fetch --all
+            git reset --hard origin/main
+            git pull origin main
+            source venv/bin/activate
+            pip install -r requirements.txt
+
+            # Restart the systemd service
+            sudo systemctl stop fastapi
+            sleep 5
+            sudo systemctl daemon-reload
+            sudo systemctl start fastapi
+            sudo systemctl restart fastapi
+            sudo systemctl status fastapi --no-pager
+
+            # Check logs to ensure it started correctly
+            sudo journalctl -u fastapi --no-pager --lines=20
+          EOF
+
+      - name: Notify Deployment Status
+        run: echo "Deployment to AWS EC2 completed successfully!"
